<?xml version="1.0"?>
<package>
  <name>ov_calib</name>
  <version>1.0.0</version>
  <description>The ov_calib package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jongwon5@illinois.edu">Jongwon Lee</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GNU General Public License v3.0</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>ov_core</build_depend>
  <build_depend>ov_msckf</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>ov_core</run_depend>
  <run_depend>ov_eval</run_depend>
  <run_depend>ov_data</run_depend>
  <run_depend>ov_msckf</run_depend>


</package>